# WizardGame

./: .gitignore  CMakeLists.txt  README.md  WizardGame.sln  WizardGame.vcxproj  WizardGame.vcxproj.filters
cmake/: FindSDL2_image.cmake
report/: report.tex
resources/: README.md  attacks.txt  level1.txt  level2.txt  level3.txt
src/: Bullet.cpp  Bullet.h  Collider.cpp  Collider.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GenericTypes.h  KeyboardState.cpp  KeyboardState.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Save.cpp  Save.h  Size.h  SpriteManager.cpp  SpriteManager.h  TextRenderer.cpp  TextRenderer.h  UserEvents.h  Utils.cpp  Utils.h  Vec2.cpp  Vec2.h  main.cpp
src/Enemies/: Adrian.cpp  Adrian.h  Basic.cpp  Basic.h  EnemyManager.cpp  EnemyManager.h
src/Exceptions/: Exception.cpp  Exception.h  InitError.h  SDLObjectError.h  TTFObjectError.cpp  TTFObjectError.h
src/Levels/: Bullet.cpp  Bullet.h  Collider.cpp  Collider.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FileLevel.cpp  FileLevel.h  Level.cpp  Level.h  Player.cpp  Player.h  TutorialLevel.cpp  TutorialLevel.h
src/Levels/Enemies/: Adrian.cpp  Adrian.h  Attack.h  Basic.cpp  Basic.h
src/UI/: AbstractLevelMenu.cpp  AbstractLevelMenu.h  GameOverMenu.cpp  GameOverMenu.h  LevelCompletedMenu.cpp  LevelCompletedMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  PauseMenu.cpp  PauseMenu.h
